# cowin-rs

./: .gitignore  Cargo.toml  LICENSE.md
src/: api.rs  client.rs  lib.rs  main.rs  paths.rs
src/api/: appointment.rs  location.rs  mod.rs  utils.rs
