[package]
name = "cowin-rs"
version = "0.1.0"
authors = ["Kaushal M <kshlmster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.9.0", features = ["attributes"]}
chrono = {version = "0.4.0", features = ["serde"]}
clap = { version = "3.0.14", features = ["derive"] }
cli-table = "0.4.6"
directories = "3.0.2"
env_logger = "0.8.0"
eyre = "0.6.0"
log = "0.4.0"
once_cell = "1.8.0"
serde = "1.0.0"
serde_json = "1.0.0"
surf = {version = "2.3.1", features = ["h1-client-rustls", "encoding", "middleware-logger"], default_features = false}
uuid = {version = "0.8.0", features = ["serde"]}

[profile.release]
opt-level = "z"
lto = true

[features]
