[package]
name = "cowin-rs"
version = "0.1.0"
authors = ["Kaushal M <kshlmster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
chrono = {version = "0.4.22", features = ["serde"]}
clap = { version = "4.0.18", features = ["derive"] }
cli-table = "0.4.7"
directories = "4.0.1"
env_logger = "0.9.1"
eyre = "0.6.8"
log = "0.4.17"
once_cell = "1.16.0"
serde = "1.0.147"
serde_json = "1.0.87"
surf = {version = "2.3.2", features = ["h1-client-rustls", "encoding", "middleware-logger"], default_features = false}
uuid = {version = "1.2.1", features = ["serde"]}

[profile.release]
opt-level = "z"
lto = true

[features]
