[package]
name = "cowin-rs"
version = "0.1.0"
authors = ["Kaushal M <kshlmster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.22", features = ["serde"]}
clap = { version = "4.0.18", features = ["derive"] }
cli-table = "0.4.7"
directories = "4.0.1"
env_logger = "0.9.1"
eyre = "0.6.8"
log = "0.4.17"
mime = "0.3"
once_cell = "1.16.0"
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true

[features]
